# laser-controller

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
scripts/: update_readme_coverage.py
src/api/: asgi.py  utils.py
src/api/modules/: grbl.py  limits.py
src/api/routers/: calibration.py  health.py  jog.py  operations.py
src/api/schemas/: calibration.py  grbl.py  health.py  jog.py  limits.py  operations.py
src/api/services/: calibration.py
tests/: conftest.py  test_health.py
